# imst-quant

./: .env.example  .gitignore  Makefile  README.md  make.bat  pyproject.toml
.planning/: PRD.md  PRD_PART2.md  PRD_PART3.md  PRD_PART4.md  PRD_PART5.md  PRD_PART6.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-project-setup-data-ingestion-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-text-processing-entity-linking/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-baseline-sentiment/: 03-01-PLAN.md  03-01-SUMMARY.md
.planning/phases/04-influence-graph-gnn/: 04-01-PLAN.md
config/: entity_test_set_schema.yaml  subreddits.yaml  ticker_aliases.yaml
examples/: quickstart.py
scripts/: bronze_to_silver.py  build_features.py  ingest_market.py  ingest_reddit.py  raw_to_bronze.py  run_influence.py  silver_to_sentiment.py
src/imst_quant/: __init__.py  cli.py  exceptions.py
src/imst_quant/config/: settings.py
src/imst_quant/credibility/: __init__.py  pipeline.py  profiler.py
src/imst_quant/entities/: __init__.py  aliases.py  cashtag.py  disambiguator.py  evaluate.py  linker.py
src/imst_quant/features/: __init__.py  builder.py
src/imst_quant/influence/: __init__.py  gnn.py  graph.py  pipeline.py  trainer.py
src/imst_quant/ingestion/: __init__.py  crypto.py  market.py  reddit.py
src/imst_quant/models/: __init__.py  cnn.py  ensemble.py  evaluation.py  feature_importance.py  lightgbm_model.py  lstm.py  train.py  transformer.py
src/imst_quant/monitoring/: __init__.py  metrics.py
src/imst_quant/paper_trading/: __init__.py  simulator.py
src/imst_quant/processing/: deduplication.py  language.py  normalizer.py
src/imst_quant/sentiment/: __init__.py  advanced_scoring.py  aggregation.py  confidence.py  finbert.py  fusion.py  pipeline.py  textblob.py
src/imst_quant/storage/: bronze.py  raw.py  silver.py
src/imst_quant/streaming/: __init__.py  realtime.py  realtime_sentiment.py
src/imst_quant/trading/: __init__.py  advanced_signals.py  backtest.py  confidence_scorer.py  dynamic_hedging.py  policy.py  portfolio.py  position_analytics.py  position_pyramiding.py  position_sizing.py  rebalancer.py  regime_transitions.py  report.py  risk_metrics.py  signal_optimizer.py  signals.py  trade_patterns.py  trailing_stop.py  walk_forward.py
src/imst_quant/utils/: __init__.py  advanced_risk.py  alpha_metrics.py  attribution.py  backtest_report.py  backtest_summary.py  backtest_utils.py  backtest_viz.py  batch_pipeline.py  benchmark.py  change_point.py  checkpoint.py  cointegration.py  concentration_metrics.py  conditional_drawdown.py  cornish_fisher_var.py  correlation.py  correlation_network.py  correlation_regime.py  correlation_viz.py  covariance_shrinkage.py  data_cleaning.py  data_pipeline.py  data_quality.py  data_utils.py  data_windowing.py  deflated_sharpe.py  drawdown_analysis.py  drawdown_circuit_breaker.py  drawdown_position_scaling.py  drawdown_recovery.py  equity_curve.py  event_analysis.py  execution_analytics.py  execution_quality.py  execution_simulator.py  exposure_analysis.py  factor_analysis.py  factor_exposure_optimizer.py  feature_scaling.py  (+83 more)
tests/: test_changepoint_cdar_moments.py  test_covariance_and_circuit_breaker.py  test_credibility.py  test_deflated_sharpe.py  test_entity_precision.py  test_features.py  test_hurst_and_turbulence.py  test_influence.py  test_models.py  test_new_utils.py  test_position_pyramiding.py  test_processing.py  test_sentiment.py  test_sentiment_signals_scenario_equity.py  test_storage.py  test_trading.py  test_trailing_stop.py  test_triple_barrier_fracdiff.py  test_var_backtesting.py  test_walk_forward.py
tests/fixtures/: entity_test_set.csv
tests/unit/: test_drawdown_position_scaling.py  test_drawdown_recovery.py  test_kelly_sizing.py  test_position_sizing.py  test_rebalance_signals.py  test_slippage.py
