[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imst-quant"
version = "0.1.0"
description = "Influence-aware Multi-Source Sentiment Trading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "praw>=7.7.1",
    "yfinance>=0.2.40",
    "ccxt>=4.4",
    "polars>=1.0",
    "pyarrow>=17.0",
    "pydantic-settings>=2.13",
    "structlog>=24.0",
    "tenacity>=8.0",
    "pyyaml>=6.0",
    "langdetect>=1.0.9",
    "datasketch>=1.6.4",
    "emoji>=2.0",
    "sentence-transformers>=2.2.2",
    "textblob>=0.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
imst-ingest-reddit = "imst_quant.ingestion.reddit:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/imst_quant"]
