[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imst-quant"
version = "0.1.0"
description = "Influence-aware Multi-Source Sentiment Trading - GNN-based social media sentiment analysis for stock market forecasting"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "trading",
    "sentiment-analysis",
    "gnn",
    "graph-neural-network",
    "quantitative-finance",
    "nlp",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Data ingestion
    "praw>=7.7.1",
    "yfinance>=0.2.40",
    "ccxt>=4.4",
    # Data processing
    "polars>=1.0",
    "pyarrow>=17.0",
    # Configuration
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # Logging and resilience
    "structlog>=24.0",
    "tenacity>=8.0",
    # NLP and text processing
    "langdetect>=1.0.9",
    "datasketch>=1.6.4",
    "emoji>=2.0",
    "textblob>=0.17.1",
    # ML and embeddings
    "sentence-transformers>=2.2.2",
    "transformers>=4.30.0",
    # Deep learning
    "torch>=2.0",
    "torch-geometric>=2.4",
    "networkx>=3.0",
    # Gradient boosting
    "lightgbm>=4.0",
    # Utilities
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
finbert = [
    "transformers>=4.30.0",
]
full = [
    "imst-quant[dev,finbert]",
]

[project.scripts]
imst = "imst_quant.cli:main"
imst-ingest-reddit = "imst_quant.ingestion.reddit:main"

[project.urls]
Homepage = "https://github.com/your-username/imst-quant"
Documentation = "https://github.com/your-username/imst-quant#readme"
Repository = "https://github.com/your-username/imst-quant.git"
Issues = "https://github.com/your-username/imst-quant/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/imst_quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | data
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests",
    "build",
    "dist",
]
